custom search changes